[tool.poetry]
name = "prodder"
version = "0.1.0"
description = "I'm terrible at poker, but maybe this bot won't be!"
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
treys = "^0.1.3"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
jupyter = "^1.0.0"
nb-black = "^1.0.7"
plotly = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
